@@ -1,6 +1,7 @@
 package add_kubernetes_metadata
 
 import (
+	"fmt"
 	"testing"
 
 	"github.com/stretchr/testify/assert"
@@ -31,7 +32,7 @@ func TestPodIndexer(t *testing.T) {
 
 	indexers := podIndexer.GetMetadata(&pod)
 	assert.Equal(t, len(indexers), 1)
-	assert.Equal(t, indexers[0].Index, podName)
+	assert.Equal(t, indexers[0].Index, fmt.Sprintf("%s/%s", ns, podName))
 
 	expected := common.MapStr{
 		"pod": common.MapStr{
@@ -47,7 +48,7 @@ func TestPodIndexer(t *testing.T) {
 
 	indices := podIndexer.GetIndexes(&pod)
 	assert.Equal(t, len(indices), 1)
-	assert.Equal(t, indices[0], podName)
+	assert.Equal(t, indices[0], fmt.Sprintf("%s/%s", ns, podName))
 }
 
 func TestContainerIndexer(t *testing.T) {
@@ -208,4 +209,50 @@ func TestFilteredGenMeta(t *testing.T) {
 
 	ok, _ = annotationsMap.HasKey("a")
 	assert.Equal(t, ok, true)
+}
+
+func TestFieldFormatMatcher(t *testing.T) {
+	testCfg := map[string]interface{}{}
+	fieldCfg, err := common.NewConfigFrom(testCfg)
+
+	assert.Nil(t, err)
+	matcher, err := NewFieldFormatMatcher(*fieldCfg)
+	assert.NotNil(t, err)
+
+	testCfg["format"] = `%{[namespace]}/%{[pod]}`
+	fieldCfg, _ = common.NewConfigFrom(testCfg)
+
+	matcher, err = NewFieldFormatMatcher(*fieldCfg)
+	assert.NotNil(t, matcher)
+	assert.Nil(t, err)
+
+	event := common.MapStr{
+		"namespace": "foo",
+		"pod":       "bar",
+	}
+
+	out := matcher.MetadataIndex(event)
+	assert.Equal(t, "foo/bar", out)
+
+	event = common.MapStr{
+		"foo": "bar",
+	}
+	out = matcher.MetadataIndex(event)
+	assert.Empty(t, out)
+
+	testCfg["format"] = `%{[dimensions.namespace]}/%{[dimensions.pod]}`
+	fieldCfg, _ = common.NewConfigFrom(testCfg)
+	matcher, err = NewFieldFormatMatcher(*fieldCfg)
+	assert.NotNil(t, matcher)
+	assert.Nil(t, err)
+
+	event = common.MapStr{
+		"dimensions": common.MapStr{
+			"pod":       "bar",
+			"namespace": "foo",
+		},
+	}
+
+	out = matcher.MetadataIndex(event)
+	assert.Equal(t, "foo/bar", out)
 }
